--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -21,6 +21,7 @@ jobs:
      
       - name: Validate PR Title
         id: validatePRTitle
+        if: github.event_name == 'pull_request'
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
@@ -46,6 +47,7 @@ jobs:
                      
       
       - name: Read version from Jira Issue
+        if: github.event_name == 'pull_request'
         run : |
                restApiGET=$(curl --request GET \
                   --url 'https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/' \
@@ -55,6 +57,7 @@ jobs:
                echo "pr_version=$restApiGET" >> $GITHUB_ENV                   
               
       - name: Read the version file from the master branch
+        if: github.event_name == 'pull_request'
         run : |
                contentMaster=$(curl \
                                -H "Accept: application/vnd.github.v3+json" \
@@ -63,6 +66,7 @@ jobs:
                echo "master_version=$(echo $contentMaster | base64 -d)" >> $GITHUB_ENV
                
       - name: Compare values and assess the mergeability based on the version files
+        if: github.event_name == 'pull_request'
         run: |
               echo 'pr version is:' $pr_version
               echo 'master version is:' $master_version
@@ -75,7 +79,8 @@ jobs:
               fi
               
       - name: Read Jira Issue Status
-        id: retrieveJiraStatus    
+        id: retrieveJiraStatus
+        if: github.event_name == 'pull_request'
         run: |
               echo ${{ env.JiraId }}
               
@@ -87,6 +92,7 @@ jobs:
               echo "JiraIssue_Status=$restApiGETStatus" >> $GITHUB_ENV
       
       - name: Assess the Jira Status
+        if: github.event_name == 'pull_request'
         run: |
                echo 'status:' ${{ env.JiraIssue_Status }}
                
