--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -5,6 +5,7 @@ on:
     types: [opened, edited, reopened, synchronize]
     branches: 
       - master
+  push:
 env:
   GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
   GITHUB_WORKFLOW_ID: ${{github.run_id}}
@@ -17,7 +18,9 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Extract branch name
-        run: echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
+        run: |
+              echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
+              echo 'Event name:' ${{ github.event_name }}
      
       - name: Validate PR Title
         id: validatePRTitle
