--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   add-automerge-label:
     runs-on: ubuntu-latest
+    
+    if: github.event.action == 'opened'
     steps:
       - uses: actions/labeler@main
         with:
