--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -15,3 +15,9 @@ jobs:
         run: |
               echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
               echo 'Event name:' ${{ github.event_name }}
+              
+              
+      - name: Extract branch name
+        run: |
+              echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
+              echo 'Event name:' ${{ github.event_name }}
