--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -2,7 +2,7 @@ name: ManagePrBranchMergeability
 
 on:
   pull_request:
-    types: [opened, edited, reopened, synchronize]
+    #types: [opened, edited, reopened, synchronize]
     #branches: 
     #  - master
   #push:
