--- a/.github/workflows/validate-pr-title.yml
+++ b/.github/workflows/validate-pr-title.yml
@@ -16,4 +16,24 @@ jobs:
       - name: Extract branch name
         if: github.event_name == 'pull_request'
         run: |
-              echo 'Event name:' ${{ github.event_name }}
+              echo PR Numer is: $GITHUB_PR_NUMBER
+                
+              restApiPRTitle=$(curl \
+                                      -H "Accept: application/vnd.github.v3+json" \
+                                      https://api.github.com/repos/naregkar/devAutoMerge/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
+                
+              echo $restApiPRTitle
+                
+              if [[ $restApiPRTitle =~ ^\[DT-[0-9]+\] ]]; then
+                #if the title matches the pattern
+                echo 'PR Title is in correct format.'
+                  
+                jira_IdUnparsed=$restApiPRTitle
+                jira_id=${jira_IdUnparsed%]*}
+                jira_id=${jira_id:1}
+                echo "JiraId=$jira_id" >> $GITHUB_ENV
+                  
+              else
+                echo 'PR Title does not comply with the required pattern.'                  
+                exit 1
+              fi
