--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -1,10 +1,11 @@
 name: ManagePrBranchMergeability
 
 on:
-    push:
+    #push:
     pull_request:
         types:
             - edited
+            - synchronize
 #     #types: [opened, edited, reopened, synchronize]
 #     types:
 #       - assigned 
