--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -2,7 +2,11 @@ name: ManagePrBranchMergeability
 
 on:
     pull_request:
-     types: [opened, edited, reopened, synchronize]
+        types: [opened, edited, reopened, synchronize]
+     
+    push:
+        branches:
+            - master
 #     types:
 #       - assigned 
 #       - labeled 
