--- a/.github/workflows/autoupdate.yaml
+++ b/.github/workflows/autoupdate.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: chinthakagodawita/autoupdate@v0.1.4
         env:
-          GITHUB_TOKEN: "${{ github.token }}"
+          GITHUB_TOKEN: "${{ secrets.AUTOMERGE_PAT }}"
           DRY_RUN: "false"
           MERGE_MSG: "Branch was auto-updated."
           RETRY_COUNT: "3"
