--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -19,9 +19,5 @@ jobs:
               
       - name: Extract branch name
         run: |
-              echo 'Event name:' ${{ github.event_name }}
-              length=$(echo $requested_reviewers | jq '. | length')
-              echo "length = $length"
-        env:
-          requested_reviewers: ${{ toJson(github.event.pull_request.requested_reviewers) }}
+              echo toJson(github.event.pull_request.requested_reviewers)
 
