--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -19,5 +19,5 @@ jobs:
               
       - name: Extract branch name
         run: |
-              echo toJson(github.event.pull_request.requested_reviewers)
+              echo ${{ github.event.pull_request.requested_reviewers }}
 
