--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -3,26 +3,13 @@ name: ManagePrBranchMergeability
 on:
     pull_request:
         types: [opened, edited, reopened, synchronize]
-     
-#     types:
-#       - assigned 
-#       - labeled 
-#       - unlabeled
-#       - opened
-#       - edited 
-#       - closed
-#       - reopened
-#       - synchronize
-#       - ready_for_review
-#       - locked
-#       - unlocked
-#       - review_requested
-#       - review_request_removed
-    #branches: 
-    #  - master
+        branches: 
+          - master
+          - release
 env:
-  GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
-  GITHUB_WORKFLOW_ID: ${{github.run_id}}
+  GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
+  GITHUB_WORKFLOW_ID: ${{ github.run_id }}
+  GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
   
 jobs:
   Manage-Mergeability:
@@ -37,14 +24,13 @@ jobs:
               echo 'Event name:' ${{ github.event_name }}
      
       - name: Validate PR Title
-        id: validatePRTitle
         if: github.event_name == 'pull_request'
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
                 restApiPRTitle=$(curl \
                                       -H "Accept: application/vnd.github.v3+json" \
-                                      https://api.github.com/repos/naregkar/devAutoMerge/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
+                                      https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
                 
                 echo $restApiPRTitle
                 
@@ -63,55 +49,67 @@ jobs:
                 fi
                      
       
-      - name: Read version from Jira Issue
+      - name: Read Issue details from Jira's API
         if: github.event_name == 'pull_request'
         run : |
-               restApiGET=$(curl --request GET \
+               restApiGETJiraIssueDetails=$(curl --request GET \
                   --url 'https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/' \
                   --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
-                  --header 'Accept: application/json' | jq -r '.fields.fixVersions[].name');                   
-              
-               echo "pr_version=$restApiGET" >> $GITHUB_ENV                   
+                  --header 'Accept: application/json');        
+               
+               jira_Issue_Type=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.issuetype.name')
+               jira_PR_Version=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.fixVersions[].name')
+               
+               echo "JiraIssueType=$jira_Issue_Type" >> $GITHUB_ENV
+               echo "JiraPRVersion=$jira_PR_Version" >> $GITHUB_ENV
+               
+               if [[ "$jira_Issue_Type" == "Story" ]] || [[ "$jira_Issue_Type" == "Bug" ]] || [[ "$jira_Issue_Type" == "Task" ]]; then                
+                    jira_Issue_Status=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.status.name')
+               else
+                    jira_Issue_Status=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.parent.fields.status.name')
+               fi
+               
+               echo "JiraStatus=$jira_Issue_Status" >> $GITHUB_ENV               
+               
               
       - name: Read the version file from the master branch
         if: github.event_name == 'pull_request'
         run : |
                contentMaster=$(curl \
                                -H "Accept: application/vnd.github.v3+json" \
-                               https://api.github.com/repos/naregkar/devAutoMerge/contents/.github/version | jq -r '.content')
+                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/version | jq -r '.content')
                                        
-               echo "master_version=$(echo $contentMaster | base64 -d)" >> $GITHUB_ENV
-               
+               echo "MasterVersion=$(echo $contentMaster | base64 -d)" >> $GITHUB_ENV
+             
+             
       - name: Compare values and assess the mergeability based on the version files
         if: github.event_name == 'pull_request'
         run: |
-              echo 'pr version is:' $pr_version
-              echo 'master version is:' $master_version
+              echo 'pr version is:' $JiraPRVersion
+              echo 'master version is:' $MasterVersion
               
-              if [[ "$pr_version" == "$master_version" ]]; then
+              if [[ "$JiraPRVersion" == "$MasterVersion" ]]; then
                 echo 'Matching PR and master versions.'
               else
-                echo 'PR branch planned for a future release. Cannot merge.'
+                echo 'PR branch planned for a future release. Cannot merge now.'
                 exit 1
               fi
-              
-      - name: Read Jira Issue Status
-        id: retrieveJiraStatus
+      
+      - name: Save GitHub info in Jira Issue item
         if: github.event_name == 'pull_request'
         run: |
-              echo ${{ env.JiraId }}
+                echo 'issue type is:' $issue_type
               
-              restApiGETStatus=$(curl --request GET \
-                  --url 'https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/' \
-                  --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
-                  --header 'Accept: application/json' | jq -r '.fields.status.name');                   
-            
-              echo "JiraIssue_Status=$restApiGETStatus" >> $GITHUB_ENV
+                #save the repo name and GitHub workflow id
+                curl -D- -u nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87 \
+                    -X PUT --data '{ "fields": { "customfield_10033" : "'"$GITHUB_REPOSITORY_NAME"'", "customfield_10029" : "'"$GITHUB_WORKFLOW_ID"'"  }}' \
+                    -H "Content-Type: application/json" https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}
+      
       
       - name: Assess the Jira Status
         if: github.event_name == 'pull_request'
         run: |
-               echo 'status:' ${{ env.JiraIssue_Status }}
+               echo 'status:' ${{ env.JiraStatus }}
                
                curl -D- -u nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87 \
                    -X PUT --data '{ "fields": { "customfield_10029" : "'"$GITHUB_WORKFLOW_ID"'" }}' \
@@ -119,8 +117,8 @@ jobs:
                
                toMergeStatus="Ready to Merge"
                
-               if [[ "${{ env.JiraIssue_Status }}" == "$toMergeStatus" ]]; then
-                 echo "PR can be merged to master"
+               if [[ "${{ env.JiraStatus }}" == "$toMergeStatus" ]]; then
+                 echo "PR can be merged to master."
                else
                  echo "Jira Issue's status is not Ready to Merge. Cannot Merge to master."
                  exit 1
