--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -32,7 +32,7 @@ jobs:
                                       -H "Accept: application/vnd.github.v3+json" \
                                       https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
                 
-                echo $restApiPRTitle
+                echo 'Entered title is:' $restApiPRTitle
                 
                 if [[ $restApiPRTitle =~ ^\[DT-[0-9]+\] ]]; then
                   #if the title matches the pattern
