--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -70,6 +70,8 @@ jobs:
                 
                     jira_Issue_ParentId=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.parent.key')
                     
+                    echo 'jira_Issue_ParentId:' $jira_Issue_ParentId
+                    
                     jira_PR_Version=$(curl --request GET \
                       --url 'https://naregkar.atlassian.net/rest/api/3/issue/$jira_Issue_ParentId/' \
                       --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
