--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -75,7 +75,7 @@ jobs:
                     jira_PR_Version=$(curl --request GET \
                       --url 'https://naregkar.atlassian.net/rest/api/3/issue/DT-50/' \
                       --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
-                      --header 'Accept: application/json');
+                      --header 'Accept: application/json' | jq -r '.fields.fixVersions[].name');
                       
                     echo 'jira_PR_Version:' $jira_PR_Version
                fi
