--- a/.github/workflows/manage-prbranch-mergeability.yml
+++ b/.github/workflows/manage-prbranch-mergeability.yml
@@ -84,7 +84,9 @@ jobs:
                       --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
                       --header 'Accept: application/json');
                       
-                      echo $restApiGETJiraParentIssueDetails
+                    fixedVersionCount=$(echo $restApiGETJiraParentIssueDetails | jq -r '.fields.fixVersions' | jq length)
+                    
+                    echo 'fixedVersionCount:' $fixedVersionCount
                     
                     
                fi
