--- a/.github/workflows/Change-Status-PR-Close.yml
+++ b/.github/workflows/Change-Status-PR-Close.yml
@@ -19,4 +19,35 @@ jobs:
         run: |
               echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
               echo 'Event name:' ${{ github.event_name }}
+       
+       
+      - name: Extract Jira Issue Id
+        if: github.event_name == 'pull_request'
+        run:  |
+                echo PR Numer is: $GITHUB_PR_NUMBER
                 
+                restApiPRTitle=$(curl \
+                                      -H "Accept: application/vnd.github.v3+json" \
+                                      https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
+                
+                echo 'Entered title is:' $restApiPRTitle
+                
+                if [[ $restApiPRTitle =~ ^\[DT-[0-9]+\] ]]; then
+                  #if the title matches the pattern
+                  
+                  jira_IdUnparsed=$restApiPRTitle
+                  jira_id=${jira_IdUnparsed%]*}
+                  jira_id=${jira_id:1}
+                  echo "JiraId=$jira_id" >> $GITHUB_ENV
+                  
+                else
+                  echo 'PR Title does not comply with the required pattern.'                  
+                  exit 1
+                fi
+       
+      - name: Close Jira Status
+        if: github.event_name == 'pull_request'
+        run: |
+              curl -D- -u nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87 \
+                    -X PUT --data '{"transition":{"id":"11"}}' \
+                    -H "Content-Type: application/json" https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}
