--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -18,14 +18,19 @@ jobs:
               echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
               echo 'Event name:' ${{ github.event_name }}
               
-              
-      - name: Execute tool for PR reviewers
-        id: 'prreviewtool'
-        uses: 'jrylan/github-action-reviews-counter@main'
-        with:
-          repo-token: '${{ secrets.TOKEN_GITHUB }}'
-          
       - name: Assess PR Reviewers Count
         run:  |
-                echo 'count is' ${{ steps.prreviewtool.outputs.approved }}
+                echo 'count is' ${{ env.PR_Branch_Name }}
+                
+                restApiGETGitHubReviewersDetails=$(curl \
+                      -H "Accept: application/vnd.github.v3+json" \
+                      https://api.github.com/repos/naregkar/devAutoMerge/pulls/$GITHUB_PR_NUMBER/reviews
+                  );
+                  
+                  approverCount=$(echo $restApiGETGitHubReviewersDetails | jq 'group_by(.user.login) | map(select(max_by(.submitted_at) .state == "APPROVED")) | length')
+                  
+                  echo 'approved count is: ' $approverCount
+                  
+                  
+      
 
