--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -5,7 +5,8 @@ on:
     types:
       - 'submitted'
 env:
-  GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
+  GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
+  GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
   
 jobs:
   Manage-PRReviewers:
@@ -17,7 +18,30 @@ jobs:
         run: |
               echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
               echo 'Event name:' ${{ github.event_name }}
-              
+      
+      - name: Extract Jira Issue Id
+        run:  |
+                echo PR Numer is: $GITHUB_PR_NUMBER
+                
+                restApiPRTitle=$(curl \
+                                      -H "Accept: application/vnd.github.v3+json" \
+                                      https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
+                
+                echo 'Entered title is:' $restApiPRTitle
+                
+                if [[ $restApiPRTitle =~ ^\[DT-[0-9]+\] ]]; then
+                  #if the title matches the pattern
+                  
+                  jira_IdUnparsed=$restApiPRTitle
+                  jira_id=${jira_IdUnparsed%]*}
+                  jira_id=${jira_id:1}
+                  echo "JiraId=$jira_id" >> $GITHUB_ENV
+                  
+                else
+                  echo 'PR Title does not comply with the required pattern.'                  
+                  exit 1
+                fi
+      
       - name: Assess PR Reviewers Count
         run:  |
                 echo 'count is' ${{ env.PR_Branch_Name }}
@@ -31,6 +55,14 @@ jobs:
                   
                   echo 'approved count is: ' $approverCount
                   
-                  
-      
-
+                  if [[ "$approverCount" -le 2]]; then
+                    echo 'More reviewers are needed in order to this Jira item to progress within its workflow.'
+                    exit 1
+                  else
+                    
+                    curl -D- -u nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87 \
+                      -X POST --data '{"transition":{"id":"61"}}' \
+                      -H "Content-Type: application/json" https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/transitions
+                    
+                  fi
+            
