--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -44,7 +44,6 @@ jobs:
       
       - name: Assess PR Reviewers Count
         run:  |
-                echo 'count is' ${{ env.PR_Branch_Name }}
                 
                 restApiGETGitHubReviewersDetails=$(curl \
                       -H "Accept: application/vnd.github.v3+json" \
@@ -60,9 +59,7 @@ jobs:
                     exit 1
                   else
                     
-                    curl -D- -u nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87 \
-                      -X POST --data '{"transition":{"id":"61"}}' \
-                      -H "Content-Type: application/json" https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/transitions
+                    echo 'change status'
                     
                   fi
             
