--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -47,8 +47,25 @@ jobs:
                 
                 restApiGETGitHubReviewersDetails=$(curl \
                             -H "Accept: application/vnd.github.v3+json" \
-                            https://api.github.com/repos/naregkar/devAutoMerge/pulls/$GITHUB_PR_NUMBER/reviews)
+                            https://api.github.com/repos/naregkar/devAutoMerge/pulls/$GITHUB_PR_NUMBER/reviews);
                   
                 approverCount=$(echo $restApiGETGitHubReviewersDetails | jq 'group_by(.user.login) | map(select(max_by(.submitted_at) .state == "APPROVED")) | length')
                 
                 echo 'approved count is: ' $approverCount
+                
+                if [[ "$approverCount" -le 1 ]]; then
+                    echo 'More reviewers are needed in order to this Jira item to progress within its workflow.'
+                    exit 1
+                else
+                    echo 'change status'
+                    
+                    curl --request PUT \
+                      --url 'https://naregkar.atlassian.net/rest/api/3/issue/DT-47/assignee' \
+                      --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
+                      --header 'Accept: application/json' \
+                      --header 'Content-Type: application/json' \
+                      --data '{
+                      "accountId": "5fea9ba3dd5eb5010881866b"
+                    }'
+                    
+                fi
