--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -53,7 +53,7 @@ jobs:
                 
                 echo 'approved count is: ' $approverCount
                 
-                if [[ "$approverCount" -le 1 ]]; then
+                if [[ "$approverCount" -lt 1 ]]; then
                     echo 'More reviewers are needed in order to this Jira item to progress within its workflow.'
                     exit 1
                 else
