--- a/.github/workflows/check-destination-branch.yml
+++ b/.github/workflows/check-destination-branch.yml
@@ -58,11 +58,13 @@ jobs:
                 [[ $1 =~ (^|[[:space:]])$2($|[[:space:]]) ]] && exit(0) || exit(1)
               }
               
+              echo 'before label'
               labelShowstopper="Showstopper"
               #if [[ ${jira_Issue_Labels[$labelShowstopper]} ]]; then 
               #  echo "Destination should be the release branch.";                
               #fi
               
               contains jira_Issue_Labels labelShowstopper
-              echo $? # 0： match, 1: failed
+              echo 'after contains'
+              echo $?
               
