--- a/.github/workflows/check-destination-branch.yml
+++ b/.github/workflows/check-destination-branch.yml
@@ -57,6 +57,12 @@ jobs:
               
               targetBranch=${{ github.event.pull_request.base.ref }}
               echo 'targetBranch: ' $targetBranch
+              
+              if [ -z "$jira_Issue_Labels" ]; then
+                echo "Array empty"
+              else
+                echo "Array non empty"
+              fi
 
 
                  
